[package]
name = "ironsea_table_vector"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Simple `Vec`-based Table implementation for the Iron Sea database toolkit."
homepage = "https://crates.io/crates/ironsea_table"
repository = "https://github.com/epfl-dias/ironsea_table"
readme = "README.md"

keywords = []
categories = ["database-implementations", "data-structures"]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
bincode = "^1.1"

ironsea_store = "^0.1"
ironsea_table = "^0.1"
